--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "todolist-20",
+  "homepage": "https://evgeniyelisov.github.io/Todolist",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite --port 3000",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build --base=./",
     "test": "vitest",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "pnpm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@emotion/react": "11.14.0",
@@ -17,6 +20,7 @@
     "@mui/material": "7.1.2",
     "@reduxjs/toolkit": " 2.8.2",
     "axios": "1.10.0",
+    "gh-pages": "^6.3.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "7.58.1",
